#0000 Minor fixing and also fixing page break in print mode.

--- a/styles.css
+++ b/styles.css
@@ -17,17 +17,17 @@ h2
 {
     width: 960px;
     margin: 0 auto;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
 }
 
 .attendee
 {
-    width: 8cm;
+    width: 9cm;
     padding: 15px;
     border: 1px solid black;
-    height: 4.8cm;
+    height: 5.2cm;
     display: inline-block;
     margin: 5px;
     position: relative;
@@ -51,10 +51,8 @@ h2
 }
 
 @media print {
-    .page-break:after
+    .page-break
     {
-        content:'';
-        display: block;
         page-break-after: always;
     }
 }
